--- a/main.html
+++ b/main.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div id="hero">
+
+		<div id="card">
+
+		  <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          
+		    <div id="card_body">
+			  <h1 id="heading">Welcome to my Pinterest clone</h1>
+			  <p id="card_description">Discover new imagination and save your favorite ideas</p>
+			  <a href=#>Explore Now</a>
+		   </div>
+
+		</div>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
